# chinese-voice-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  chinese_wake_words.txt  download_models.py  download_piper_model.py  list_mcp_tools.py  main.py  package-lock.json  package.json  pyproject.toml  quick_test.py  quick_test_fixed.py  run_flows.bat  run_tests.py  test_agent_skills.py  test_flows_fix.py  test_interruption.py  test_models.py  test_moondream.py  test_phase1.py  test_pipecat_v2.py  test_vision_models.py  uv  voice_wake_up.py  wake_words.txt
config/: mcp_servers.json
docs/: REFACTORING_COMPLETE.md  agent-skills-authoring.md  agent-skills-integration-v3.md  agent-skills-integration.md  agent-skills-migration-v3.md  agent-skills-v3-architecture.md  agent-skills-v3-implementation-summary.md  interruption-analysis.md  pipecat-changes-comparison.md  pipecat-flows-integration-summary.md  pipecat-flows-integration.md  pipecat-migration-guide.md  quick-fix-import-error.md  qwen_llm_service_guide.md  refactoring-migration-guide.md  refactoring-summary.md  vad-optimization-summary.md  wake-word-solution.md
scripts/: run_flows_version.py
skills/browser/: SKILL.md
skills/calendar/: SKILL.md
skills/weather/: SKILL.md
skills/weather-standard/: SKILL.md
skills/weather-standard/examples/: query-weather.py
skills/weather-standard/references/: api-spec.md
skills/weather-standard/scripts/: test-weather-api.sh
src/voice_assistant/: __init__.py  config.py  llm.py  llm_services.py  mcp_client.py  pipecat_adapters.py  pipecat_flows_main.py  pipecat_main.py  pipecat_main_v2.py  pyaudio_transport.py  qwen_llm_service.py  react_agent.py  sherpa_stt_service.py  tts.py  vad_processor.py  vision.py  vision_agent.py  vision_services.py  wake_word.py
src/voice_assistant/skills/: __init__.py  base_skill.py  skill_executor.py  skill_loader.py  skill_manager.py  skill_processor.py
tests/: conftest.py  test_pipecat_flows_integration.py  test_skill_integration.py  test_skill_matcher.py  test_skill_progressive_disclosure.py  test_skill_registry.py
