[project]
name = "voice-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "open-interpreter>=0.4.3",
    "pillow>=12.0.0",
    "pyautogui>=0.9.54",
    "requests>=2.32.5",
    "sherpa-onnx>=1.12.19",
    "soundcard>=0.4.2",
    "numpy>=1.24.0",
    "pyaudio>=0.2.11",
]
